Phase 3: PBR materials, lighting, and progressive anti-aliasing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -154,17 +154,27 @@ function(compile_optix_ptx target_name cuda_file output_ptx)
         list(APPEND nvcc_flags --gpu-architecture=compute_${arch})
     endforeach()
 
-    # Use the first architecture for PTX output
+    # Use the first architecture for PTX output (PTX is architecture-agnostic)
     list(GET CMAKE_CUDA_ARCHITECTURES 0 first_arch)
+
+    # Get first include directory from each (they may be lists)
+    list(GET OptiX_INCLUDE_DIRS 0 optix_include)
+    list(GET CUDAToolkit_INCLUDE_DIRS 0 cuda_include)
 
     add_custom_command(
         OUTPUT ${ptx_file}
         COMMAND ${CMAKE_COMMAND} -E make_directory "${CMAKE_BINARY_DIR}/optix_programs"
         COMMAND ${CUDAToolkit_NVCC_EXECUTABLE}
-                ${nvcc_flags}
-                ${include_flags}
+                --ptx
+                -O3
+                --use_fast_math
+                -lineinfo
+                --machine=64
                 --gpu-architecture=compute_${first_arch}
-                -o ${ptx_file}
+                -I${optix_include}
+                -I${cuda_include}
+                -o
+                ${ptx_file}
                 ${cuda_file_abs}
         DEPENDS ${cuda_file_abs}
         COMMENT "Compiling OptiX PTX: ${cuda_file_name}.cu -> ${cuda_file_name}.ptx"
@@ -190,8 +200,13 @@ compile_optix_ptx(spectra_ptx
     CLOSESTHIT_PTX
 )
 
+compile_optix_ptx(spectra_ptx
+    "${CMAKE_CURRENT_SOURCE_DIR}/optix_programs/anyhit.cu"
+    ANYHIT_PTX
+)
+
 # Custom target for PTX files
-add_custom_target(optix_ptx ALL DEPENDS ${RAYGEN_PTX} ${MISS_PTX} ${CLOSESTHIT_PTX})
+add_custom_target(optix_ptx ALL DEPENDS ${RAYGEN_PTX} ${MISS_PTX} ${CLOSESTHIT_PTX} ${ANYHIT_PTX})
 
 #------------------------------------------------------------------------------
 # Main Executable
@@ -258,6 +273,9 @@ add_custom_command(TARGET SpectraPBR POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy_if_different
             "${CMAKE_BINARY_DIR}/optix_programs/closesthit.ptx"
             "$<TARGET_FILE_DIR:SpectraPBR>/optix_programs/"
+    COMMAND ${CMAKE_COMMAND} -E copy_if_different
+            "${CMAKE_BINARY_DIR}/optix_programs/anyhit.ptx"
+            "$<TARGET_FILE_DIR:SpectraPBR>/optix_programs/"
     COMMENT "Copying PTX files to build directory"
 )
 
@@ -270,6 +288,7 @@ install(FILES
     ${CMAKE_BINARY_DIR}/optix_programs/raygen.ptx
     ${CMAKE_BINARY_DIR}/optix_programs/miss.ptx
     ${CMAKE_BINARY_DIR}/optix_programs/closesthit.ptx
+    ${CMAKE_BINARY_DIR}/optix_programs/anyhit.ptx
     DESTINATION bin/optix_programs
 )
 
