--- a/.gitignore
+++ b/.gitignore
@@ -28,11 +28,13 @@ x86/
 [Aa][Rr][Mm]/
 [Aa][Rr][Mm]64/
 [Aa][Rr][Mm]64[Ee][Cc]/
+build/
 bld/
 [Oo]bj/
 [Oo]ut/
 [Ll]og/
 [Ll]ogs/
+models/
 
 # Build results on 'Bin' directories
 **/[Bb]in/*
